; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-ext/module/extr_module.c_jerryx_module_create_error.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-ext/module/extr_module.c_jerryx_module_create_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@module_name_property_name = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32)* @jerryx_module_create_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @jerryx_module_create_error(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @jerry_create_error(i32 %10, i32* %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @jerry_get_value_from_error(i32 %13, i32 0)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* @module_name_property_name, align 4
  %16 = call i32 @jerry_create_string(i32 %15)
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* %9, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @jerry_set_property(i32 %17, i32 %18, i32 %19)
  %21 = call i32 @jerry_release_value(i32 %20)
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @jerry_release_value(i32 %22)
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @jerry_release_value(i32 %24)
  %26 = load i32, i32* %7, align 4
  ret i32 %26
}

declare dso_local i32 @jerry_create_error(i32, i32*) #1

declare dso_local i32 @jerry_get_value_from_error(i32, i32) #1

declare dso_local i32 @jerry_create_string(i32) #1

declare dso_local i32 @jerry_release_value(i32) #1

declare dso_local i32 @jerry_set_property(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
